<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/choice_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chips_header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/favourite_chips"
        />



<com.google.android.material.chip.Chip
    android:id="@+id/chip1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/chip1"
    />
        <com.google.android.material.chip.Chip
            android:id="@+id/chip2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip2"
            />
        <com.google.android.material.chip.Chip
            android:id="@+id/chip3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip3"
            />
        <com.google.android.material.chip.Chip
            android:id="@+id/chip4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip4"
            />
        <com.google.android.material.chip.Chip
            android:id="@+id/chip5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip5"
            />
        <com.google.android.material.chip.Chip
            android:id="@+id/chip6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip6"
            />
        <com.google.android.material.chip.Chip
            android:id="@+id/chip7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip7"
            />
        <com.google.android.material.chip.Chip
            android:id="@+id/chip8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip8"
            />
        <com.google.android.material.chip.Chip
            android:id="@+id/chip9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip9"
            />
        <com.google.android.material.chip.Chip
            android:id="@+id/chip10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip10"
            />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/conf_btn"
        android:text="@string/conf_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/favourite_chips"
        />
    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/favourite_chips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:flow_wrapMode="chain"
        app:constraint_referenced_ids="chip1,chip2,chip3,chip4,chip5,chip6,chip7,chip8,chip9,chip10"
        app:layout_constraintBottom_toTopOf="@+id/conf_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choice_tv"
        android:orientation="horizontal"
        />
</androidx.constraintlayout.widget.ConstraintLayout>