<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="Autofill,LabelFor"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
        android:hint="@string/email_container"
        app:startIconDrawable="@drawable/ic_email"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/pass_container"
        app:layout_constraintEnd_toStartOf="@id/right_vertical_guide"
        app:layout_constraintStart_toEndOf="@id/left_vertical_guide"
        >
        <EditText
            android:id="@+id/email_et"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
        android:hint="@string/pass_container"
        app:startIconDrawable="@drawable/ic_lock"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/register_btn"
        app:layout_constraintEnd_toStartOf="@id/right_vertical_guide"
        app:layout_constraintStart_toEndOf="@id/left_vertical_guide"
        >

        <EditText
            android:id="@+id/pass_et"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_btn"
        app:layout_constraintBottom_toTopOf="@+id/bottom_horizontal_guide"
        app:layout_constraintEnd_toStartOf="@id/right_vertical_guide"
        app:layout_constraintStart_toEndOf="@id/left_vertical_guide"
        app:layout_constraintHorizontal_bias="0.5"
        />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_vertical_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_vertical_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="350dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_horizontal_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="490dp" />



</androidx.constraintlayout.widget.ConstraintLayout>